--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,4 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
-
 buildscript {
     repositories {
         // Make sure that you have the following two repositories
@@ -8,10 +7,10 @@ buildscript {
 
     }
     dependencies {
-//        not sure to add
-//        classpath 'com.android.tools.build:gradle:7.3.1'
+//        different version gradle for different environment
+        classpath 'com.android.tools.build:gradle:7.3.1'
         // Add the dependency for the Google services Gradle plugin
-        classpath 'com.android.tools.build:gradle:7.4.2'
+//        classpath 'com.android.tools.build:gradle:7.4.2'
         classpath 'com.google.gms:google-services:4.3.15'
         def nav_version = "2.5.3"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
